final_project_new_port_with links added and fonts matched

--- a/project/new.html
+++ b/project/new.html
@@ -19,8 +19,8 @@
     <h1 class="logo">Reach-Out</h1>
     <nav class="menu">
         <ul>
-          <li><a href="port.html">Start volunteering</a></li>
-          <li><a href="#">Find volunteers</a></li>
+          <li><a href="port.html">Start Volunteering</a></li>
+          <li><a href="#">Find Volunteers</a></li>
           <li><a href="#">Search Organisations</a></li>
           <li><a href="#">News and Campaigns</a></li>
         </ul>
@@ -29,12 +29,12 @@
 
 <div class="hero_div1">
   <div class="caption">
-    Do something good today.
+    Do Something Good Today.
   </div>
 </div>
 
   <div class="primary container_12">
-    <h2>Services You Provide</h2>
+    <h2>Services We Provide</h2>
 <div class="img_size">
     <div class="g1 grid_4">
       <h3>Teach and Raise</h3>
@@ -102,11 +102,11 @@
     <div class="social grid_5">
       <h3>Stay in Touch</h3>
       <ul>
-        <li><a href="#"><img src="img/1.png" alt="Facebook"></a></li>
-        <li><a href="#"><img src="img/face.png" alt="Twitter"></a></li>
-        <li><a href="#"><img src="img/pin.png" alt="Instagram"></a></li>
-        <li><a href="#"><img src="img/you.png" alt="Instagram"></a></li>
-        <li><a href="#"><img src="img/go.png" alt="Instagram"></a></li>
+        <li><a href='https://www.twitter.com'><img src="img/1.png" alt="Twitter"></a></li>
+        <li><a href='https://www.facebook.com'><img src="img/face.png" alt="Facebook"></a></li>
+        <li><a href='https://www.pinterest.com'><img src="img/pin.png" alt="pinterest"></a></li>
+        <li><a href='https://www.youtube.com'><img src="img/you.png" alt="youtube"></a></li>
+        <li><a href='https://www.google.com'><img src="img/go.png" alt="google+"></a></li>
       </ul>
     </div>
 </div>
