--- a/project/port.html
+++ b/project/port.html
@@ -13,7 +13,7 @@
 <body>
 
 <header class="head">
-    <h1 class="logo">Reach-Out</h1>
+    <h1 class="logo"><a href="new.html">Reach-Out</a></h1>
     <nav class="menu">
         <ul>
           <li><a href="#">Start volunteering</a></li>
@@ -25,10 +25,10 @@
   </header>
   <div class="start container_12">
       <h1>Start Volunteering</h1>
-      <h3>Areas of Interest</h3>
   </div>
 <div class="primary container_12">
 <div class="img_size">
+    <h3>Areas of Interest</h3>
     <div class="g1 grid_4">
       <img src="img/ko.jpg" alt="teaching">
       <h5>Operational</h5>
@@ -65,7 +65,7 @@
     <h3>Featured Opportunities</h3>
     <div class= "n1 grid_4">
       <div class="upper">
-        <p>24 july 2016-24 august 2016</p>
+        <p>24 october 2016 - 1 november 2016</p>
         <img src="img/diff.jpg" alt="guide and grow">
         <p>Administrator</p>
         <hr>
@@ -83,7 +83,7 @@
 
       <div class= "n1 grid_4">
         <div class="upper">
-          <p>10 November 2016-12 December 2016</p>
+          <p>10 November 2016 - 12 December 2016</p>
           <img src="img/man.jpg" alt="guide and grow">
           <p>Administrator</p>
           <hr>
@@ -101,7 +101,7 @@
 
         <div class= "n1 grid_4">
           <div class="upper">
-            <p>14 August 2016-20 September 2016</p>
+            <p>14 August 2016 - 20 September 2016</p>
             <img src="img/fun2.jpg" alt="guide and grow">
             <p>Administrator</p>
             <hr>
@@ -148,11 +148,11 @@
     <div class="social grid_5">
       <h3>Stay in Touch</h3>
       <ul>
-        <li><a href="#"><img src="img/1.png" alt="Facebook"></a></li>
-        <li><a href="#"><img src="img/face.png" alt="Twitter"></a></li>
-        <li><a href="#"><img src="img/pin.png" alt="Instagram"></a></li>
-        <li><a href="#"><img src="img/you.png" alt="Instagram"></a></li>
-        <li><a href="#"><img src="img/go.png" alt="Instagram"></a></li>
+        <li><a href='https://www.twitter.com'><img src="img/1.png" alt="Twitter"></a></li>
+        <li><a href='https://www.facebook.com'><img src="img/face.png" alt="Facebook"></a></li>
+        <li><a href='https://www.pinterest.com'><img src="img/pin.png" alt="pinterest"></a></li>
+        <li><a href='https://www.youtube.com'><img src="img/you.png" alt="youtube"></a></li>
+        <li><a href='https://www.google.com'><img src="img/go.png" alt="google+"></a></li>
       </ul>
     </div>
 </div>
