all indentations and comments

--- a/project/port.html
+++ b/project/port.html
@@ -1,65 +1,65 @@
 <html>
 <head>
-<title>Start Volunteering</title>
-<link rel="stylesheet" href="css/reset.css">
+  <title>Start Volunteering</title>
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/960_12_col.css" />
   <link rel="stylesheet" href="css/text.css" />
   <link rel="stylesheet" href="css/port.css" />
-<link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'> <!-- font-family: 'Cabin Sketch', cursive;-->
-<link href='https://fonts.googleapis.com/css?family=Average' rel='stylesheet' type='text/css'><!-- norma;l::font-family: 'Average', serif;-->
-<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' />
+  <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'> <!-- font-family: 'Cabin Sketch', cursive;-->
+  <link href='https://fonts.googleapis.com/css?family=Average' rel='stylesheet' type='text/css'><!-- norma;l::font-family: 'Average', serif;-->
+  <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' />
 </head>
 <body>
 
-<header class="head">
+  <header class="head">
     <h1 class="logo"><a href="new.html">Reach-Out</a></h1>
     <nav class="menu">
-        <ul>
-          <li><a href="#">Start volunteering</a></li>
-          <li><a href="#">Find volunteers</a></li>
-          <li><a href="#">Search Organisations</a></li>
-          <li><a href="#">News and Campaigns</a></li>
-        </ul>
-      </nav>
+      <ul>
+        <li><a href="#">Start volunteering</a></li>
+        <li><a href="#">Find volunteers</a></li>
+        <li><a href="#">Search Organisations</a></li>
+        <li><a href="#">News and Campaigns</a></li>
+      </ul>
+    </nav>
   </header>
   <div class="start container_12">
-      <h1>Start Volunteering</h1>
+    <h1>Start Volunteering</h1>
   </div>
-<div class="primary container_12">
-<div class="img_size">
-    <h3>Areas of Interest</h3>
-    <div class="g1 grid_4">
-      <img src="img/ko.jpg" alt="teaching">
-      <h5>Operational</h5>
-      <h6>Small scale change </h6>
-    </div>
-    <div class="g2 grid_4">
-      <img src="img/mike.jpg" alt="guide and grow">
-      <h5>Public Relations</h5>
-      <h6>Healthy Relationships</h6>
-    </div>
-    <div class="g3 grid_4">
-      <img src="img/tech.png" alt="guide and grow">
-      <h5>Campaigning</h5>
-      <h6>Large scale change</h6>
-    </div>
-    <div class="g1 grid_4">
-      <img src="img/ru1.jpg" alt="teaching">
-      <h5>Charity</h5>
-      <h6>Funding</h6>
-    </div>
-    <div class="g2 grid_4">
-      <img src="img/donate.jpg" alt="guide and grow">
-      <h5>Donation camps</h5>
-      <h6>Gather and Distribute</h6>
-    </div>
-    <div class="g3 grid_4">
-      <img src="img/dis.jpg" alt="guide and grow">
-      <h5>Disaster volunteers</h5>
-      <h6>Victim's First</h6>
-    </div>
-  </div> <!--img size-->
+  <div class="primary container_12">
+    <div class="img_size">
+      <h3>Areas of Interest</h3>
+      <div class="g1 grid_4">
+        <img src="img/ko.jpg" alt="teaching">
+        <h5>Operational</h5>
+        <h6>Small scale change </h6>
+      </div>
+      <div class="g2 grid_4">
+        <img src="img/mike.jpg" alt="guide and grow">
+        <h5>Public Relations</h5>
+        <h6>Healthy Relationships</h6>
+      </div>
+      <div class="g3 grid_4">
+        <img src="img/tech.png" alt="guide and grow">
+        <h5>Campaigning</h5>
+        <h6>Large scale change</h6>
+      </div>
+      <div class="g1 grid_4">
+        <img src="img/ru1.jpg" alt="teaching">
+        <h5>Charity</h5>
+        <h6>Funding</h6>
+      </div>
+      <div class="g2 grid_4">
+        <img src="img/donate.jpg" alt="guide and grow">
+        <h5>Donation camps</h5>
+        <h6>Gather and Distribute</h6>
+      </div>
+      <div class="g3 grid_4">
+        <img src="img/dis.jpg" alt="guide and grow">
+        <h5>Disaster volunteers</h5>
+        <h6>Victim's First</h6>
+      </div>
+    </div> <!--img size-->
   </div><!--primary container_12-->
   <div class="news container_12">
     <h3>Featured Opportunities</h3>
@@ -78,73 +78,71 @@
           <li><a href="#" class="button">View</a></li>
           <li><a href="#" class="button">Save</a></li>
         </ul>
-        </div>
       </div>
+    </div><!--n1_mobile view-->
 
-      <div class= "n1 grid_4">
-        <div class="upper">
-          <p>10 November 2016 - 12 December 2016</p>
-          <img src="img/man.jpg" alt="guide and grow">
-          <p>Administrator</p>
-          <hr>
-          <p>Group Helpers</p>
-          <hr>
-          <p>Rating               <i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></p>
-        </div>
-        <div class="lower">
-          <ul>
-            <li><a href="#" class="button">View</a></li>
-            <li><a href="#" class="button">Save</a></li>
-          </ul>
-          </div>
-        </div>
+    <div class= "n1 grid_4">
+      <div class="upper">
+        <p>10 November 2016 - 12 December 2016</p>
+        <img src="img/man.jpg" alt="guide and grow">
+        <p>Administrator</p>
+        <hr>
+        <p>Group Helpers</p>
+        <hr>
+        <p>Rating               <i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></p>
+      </div>
+      <div class="lower">
+        <ul>
+          <li><a href="#" class="button">View</a></li>
+          <li><a href="#" class="button">Save</a></li>
+        </ul>
+      </div>
+    </div>
 
-        <div class= "n1 grid_4">
-          <div class="upper">
-            <p>14 August 2016 - 20 September 2016</p>
-            <img src="img/fun2.jpg" alt="guide and grow">
-            <p>Administrator</p>
-            <hr>
-            <p>Family Fun Day</p>
-            <hr>
-            <p>Rating               <i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></p>
-          </div>
-          <div class="lower">
-            <ul>
-              <li><a href="#" class="button">View</a></li>
-              <li><a href="#" class="button">Save</a></li>
-            </ul>
-            </div>
-          </div>
-
-
-    </div><!--news container-->
+    <div class= "n1 grid_4">
+      <div class="upper">
+        <p>14 August 2016 - 20 September 2016</p>
+        <img src="img/fun2.jpg" alt="guide and grow">
+        <p>Administrator</p>
+        <hr>
+        <p>Family Fun Day</p>
+        <hr>
+        <p>Rating               <i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></p>
+      </div>
+      <div class="lower">
+        <ul>
+          <li><a href="#" class="button">View</a></li>
+          <li><a href="#" class="button">Save</a></li>
+        </ul>
+      </div>
+    </div><!--n1 -->
+  </div><!--news container-->
 
   <div class="foot_w container_12">
     <div class="links grid_7">
       <div class="grid_2">
         <ul>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Feedback</a></li>
-        <li><a href="#">Contact us</a></li>
-      </ul>
-    </div>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Feedback</a></li>
+          <li><a href="#">Contact us</a></li>
+        </ul>
+      </div>
       <div class="grid_2">
         <ul>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Safety and Security</a></li>
-        <li><a href="#">Privacy policy</a></li>
-      </ul>
-    </div>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Safety and Security</a></li>
+          <li><a href="#">Privacy policy</a></li>
+        </ul>
+      </div>
       <div class="grid_2">
         <ul>
-        <li><a href="#">Customers</a></li>
-        <li><a href="#">Advertisements</a></li>
-        <li><a href="#">Developers</a></li>
-        <li><a href="#">Partnerships</a></li>
-      </ul>
-    </div>
-</div>
+          <li><a href="#">Customers</a></li>
+          <li><a href="#">Advertisements</a></li>
+          <li><a href="#">Developers</a></li>
+          <li><a href="#">Partnerships</a></li>
+        </ul>
+      </div>
+    </div><!--links-->
     <div class="social grid_5">
       <h3>Stay in Touch</h3>
       <ul>
@@ -154,11 +152,11 @@
         <li><a href='https://www.youtube.com'><img src="img/you.png" alt="youtube"></a></li>
         <li><a href='https://www.google.com'><img src="img/go.png" alt="google+"></a></li>
       </ul>
-    </div>
-</div>
-<div class="copyright container_12 clearfix">
-<p>2016 <i class="fa fa-copyright" aria-hidden="true"></i> All rights reserved Reach-Out</p>
-</div>
+    </div><!--social-->
+  </div><!--footer-->
+  <div class="copyright container_12 clearfix">
+    <p>2016 <i class="fa fa-copyright" aria-hidden="true"></i> All rights reserved Reach-Out</p>
+  </div>
 
 </body>
 </html>
