added new bootstrap files with carasoul mission starementy

--- a/html_project/new.html
+++ b/html_project/new.html
@@ -16,7 +16,7 @@
 
 
   <header class="head">
-      <h1 class="logo">Reach-Out</h1>
+      <h1 class="logo">Reach-<i class="fa fa-globe" aria-hidden="true"></i>ut</h1>
       <nav class="menu">
           <ul>
             <li><a href="port.html">Start Volunteering</a></li>
