--- a/html_project/port.html
+++ b/html_project/port.html
@@ -13,7 +13,7 @@
 <body>
 
   <header class="head">
-    <h1 class="logo"><a href="new.html">Reach-Out</a></h1>
+    <h1 class="logo"><a href="new.html">REACH-<i class="fa fa-globe" aria-hidden="true"></i>UT</a></h1>
     <nav class="menu">
       <ul>
         <li><a href="#">Start volunteering</a></li>
